--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
   <groupId>org.mybatis</groupId>
   <artifactId>mybatis</artifactId>
-  <version>3.2.7</version>
+  <version>3.2.7.P</version>
   <packaging>jar</packaging>
 
   <name>MyBatis</name>
@@ -112,12 +112,14 @@
     <system>Travis CI</system>
     <url>https://travis-ci.org/mybatis/mybatis-3/</url>
   </ciManagement>
+  <!-- 
   <distributionManagement>
     <site>
       <id>github</id>
       <url>gitsite:git@github.com/mybatis/mybatis-3.git</url>
     </site>
   </distributionManagement>
+   -->
 
   <properties>
     <findbugs.onlyAnalyze>org.apache.ibatis.*</findbugs.onlyAnalyze>
@@ -237,6 +239,36 @@
 		<version>5.1.25</version>
 	</dependency>
   </dependencies>
+  
+	<repositories>
+		<repository>
+          <id>nexus</id>
+          <name>Nexus Repository</name>
+          <url>http://http://192.168.1.188:55010/nexus/content/groups/public/</url>
+          <releases>
+              <enabled>true</enabled>
+          </releases>
+          <snapshots>
+              <enabled>true</enabled>
+          </snapshots>
+      	</repository>
+		<repository>
+			<id>Nexus thirdparty</id>
+			<name>Nexus thirdparty</name>
+			<url>http://192.168.1.188:55010/nexus/content/repositories/thirdparty/</url>
+		</repository>
+	</repositories>
+
+	<distributionManagement>
+		<repository>
+			<id>releases</id>
+			<url>http://192.168.1.188:55010/nexus/content/repositories/releases/</url>
+		</repository>
+		<snapshotRepository>
+			<id>snapshots</id>
+			<url>http://192.168.1.188:55010/nexus/content/repositories/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
 
   <build>
     <plugins>
